--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"test": "mocha --timeout 5000 --recursive --exit --ui tdd tests/"
+		"test": "\"mocha --timeout 5000 --recursive --exit --ui tdd tests/\"",
+		"dev": "nodemon server.js"
 	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
@@ -14,9 +15,11 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"form-data": "^4.0.2",
 		"mocha": "^8.1.3",
-		"mongodb": "^6.16.0",
-		"nodemon": "^3.1.10"
+		"mongodb": "^3.7.4",
+		"mongoose": "^5.11.8",
+		"nodemon": "^2.0.6"
 	},
 	"repository": {
 		"type": "git",
